adjusted image width on mobile; adjusted page title component to prevent long titles overlapping back button; adjusted font size of prev/next buttons;

--- a/css/global.scss
+++ b/css/global.scss
@@ -78,4 +78,6 @@ img.ik-image {
   border-top-right-radius: 4px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
+  height: auto;
+  max-width: 100%;
 }
